added docker file and made swagger changes;
